--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_fb.png" alt="Logo of Facebook for testing">
                 <figcaption>Facebook</figcaption>
             </figure>
+            </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_insta.png" alt="Logo of Instagram for testing">
                 <figcaption>Instagram</figcaption>
@@ -129,25 +130,26 @@
                 <figcaption>YouTube</figcaption>
             </figure>
             <figure class="logo">
-                <img src="Logo Images (for Testing)/Noisy Logo (Images)/fb2.png" alt="Logo of Facebook for testing">
-                <figcaption>Facebook</figcaption><!-- High Perturbation -->
+                <img src="./Noisy Logo (Images)/fb2.png" alt="Logo of Facebook for testing">
+                <figcaption>Facebook</figcaption>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Noisy Logo (Images)/insta2.png" alt="Logo of Instagram for testing">
-                <figcaption>Instagram</figcaption><!-- High Perturbation -->
+                <figcaption>Instagram</figcaption>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Noisy Logo (Images)/yt2.png" alt="Logo of YouTube for testing">
-                <figcaption>YouTube</figcaption><!-- High Perturbation -->
+                <figcaption>YouTube</figcaption>
             </figure>
         </div>
 
-        <!-- Survey Form -->
+        <!-- Individual Questions for Each Image -->
+        
         <form id="logo-trust-survey-form" action="https://formspree.io/f/mnnqpwel" method="post">
             <h2>Survey Questions</h2>
 
             <label for="logo-trust">For each logo, rate how much you trust it as representing the brand (1-5):</label><br>
-            <label for="logo-trust-fb1">Facebook:</label><!-- Low Perturbation -->
+            <label for="logo-trust-4">Facebook (Image 4):</label>
             <select id="logo-trust-fb1" name="logo-trust-fb1">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -156,7 +158,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label for="logo-trust-fb2">Facebook:</label><!-- High Perturbation -->
+            <label for="logo-trust-7">Facebook (Image 7):</label>
             <select id="logo-trust-fb2" name="logo-trust-fb2">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -165,7 +167,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label for="logo-trust-insta1">Instagram:</label><!-- Low Perturbation -->
+            <label for="logo-trust-5">Instagram (Image 5):</label>
             <select id="logo-trust-insta1" name="logo-trust-insta1">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -174,7 +176,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label for="logo-trust-insta2">Instagram:</label><!-- High Perturbation -->
+            <label for="logo-trust-8">Instagram (Image 8):</label>
             <select id="logo-trust-insta2" name="logo-trust-insta2">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -183,7 +185,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label for="logo-trust-yt1">YouTube:</label><!-- Low Perturbation -->
+            <label for="logo-trust-6">YouTube (Image 6):</label>
             <select id="logo-trust-yt1" name="logo-trust-yt1">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -192,7 +194,7 @@
                 <option value="5">5 - Completely</option>
             </select><br>
 
-            <label for="logo-trust-yt2">YouTube:</label><!-- High Perturbation -->
+            <label for="logo-trust-9">YouTube (Image 9):</label>
             <select id="logo-trust-yt2" name="logo-trust-yt2">
                 <option value="1">1 - Not at all</option>
                 <option value="2">2</option>
@@ -247,5 +249,4 @@
     </div>
 </body>
 </html>
-
 
