--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <figcaption>YouTube</figcaption>
             </figure>
             <figure class="logo">
-                <img src="./Noisy Logo (Images)/fb2.png" alt="Logo of Facebook for testing">
+                <img src="Logo Images (for Testing)/Noisy Logo (Images)/fb2.png" alt="Logo of Facebook for testing">
                 <figcaption>Facebook</figcaption>
             </figure>
             <figure class="logo">
