--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         <!-- Individual Questions for Each Image -->
         
-        <form id="logo-trust-survey-form" action="https://formspree.io/f/mnnqpwel" method="post">
+        <form id="logo-trust-survey-form" action="https://formspree.io/f/xqakbjga" method="post">
             <h2>Survey Questions</h2>
 
             <label for="logo-trust">For each logo, rate how much you trust it as representing the brand (1-5):</label><br>
