--- a/index.html
+++ b/index.html
@@ -106,40 +106,40 @@
         <div class="logo-section">
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_fb.png" alt="Logo of Facebook for testing">
-                <figcaption>Facebook</figcaption>
+                <figcaption>Facebook (Image 1)</figcaption>
             </figure>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_insta.png" alt="Logo of Instagram for testing">
-                <figcaption>Instagram</figcaption>
+                <figcaption>Instagram (Image 2)</figcaption>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Control Group (Images)/CLEAN_yt.png" alt="Logo of YouTube for testing">
-                <figcaption>YouTube</figcaption>
+                <figcaption>YouTube (Image 3)</figcaption>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Noisy Logo (Images)/fb1.png" alt="Logo of Facebook for testing">
-                <figcaption>Facebook</figcaption>
+                <figcaption>Facebook (Image 4)</figcaption>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Noisy Logo (Images)/insta1.png" alt="Logo of Instagram for testing">
-                <figcaption>Instagram</figcaption>
+                <figcaption>Instagram (Image 5)</figcaption>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Noisy Logo (Images)/yt1.png" alt="Logo of YouTube for testing">
-                <figcaption>YouTube</figcaption>
+                <figcaption>YouTube (Image 6)</figcaption>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Noisy Logo (Images)/fb2.png" alt="Logo of Facebook for testing">
-                <figcaption>Facebook</figcaption>
+                <figcaption>Facebook (Image 7)</figcaption>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Noisy Logo (Images)/insta2.png" alt="Logo of Instagram for testing">
-                <figcaption>Instagram</figcaption>
+                <figcaption>Instagram (Image 8)</figcaption>
             </figure>
             <figure class="logo">
                 <img src="Logo Images (for Testing)/Noisy Logo (Images)/yt2.png" alt="Logo of YouTube for testing">
-                <figcaption>YouTube</figcaption>
+                <figcaption>YouTube (Image 9)</figcaption>
             </figure>
         </div>
 
